# App-Project

./: .gitignore  INSTALL-LINUX.md  Makefile  README.md  Sleep Tracker.bat  Start Sleep Tracker.pyw  app.py  database.py  install-linux.sh  io.github.lifetracker.json  meson.build  sleep_tracker.db  uninstall-linux.sh
.github/workflows/: build-linux.yml
data/: io.github.lifetracker.desktop  io.github.lifetracker.gresource.xml  io.github.lifetracker.metainfo.xml  meson.build  style.css
linux/: build-rpm.sh  sleep-tracker.desktop  sleep-tracker.sh  sleep-tracker.spec
src/: __init__.py  database.py  lifetracker.in  main.py  meson.build
src/views/: __init__.py  bowel_view.py  fitness_view.py  goals_view.py  home_view.py  insights_view.py  login_view.py  medication_view.py  recovery_view.py  relationships_view.py  settings_view.py  setup_view.py  sleep_view.py
static/css/: style.css
static/js/: app.js
templates/: base.html  calendar.html  charts.html  checkin.html  history.html  index.html  log_entry.html
